Updated testing message; enabled all actuator endpoints.

--- a/application.properties
+++ b/application.properties
@@ -3,11 +3,9 @@ spring.sleuth.async.enabled=false
 spring.sleuth.annotation.enabled=false
 
 
-# management endpoints
-management.endpoints.web.expose=*
-
-
-management.endpoint.refresh.enabled=true
+# Enable all actuator end-points
+management.endpoints.web.exposure.include=*
+# management.endpoint.refresh.enabled=true
 
 
 ### REACTIVE
