Added comments for messaging

--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,7 +1,8 @@
 server.port=${PORT:8000}
 message = nihao Adelaide!
 
-# define the destination to which the input MessageChannel should be bound
+# You can use @EnableBinding to bind your application to a channel. Input and
+# output channels with the same destination are connected.
 spring.cloud.stream.bindings.input.destination = reservations
 
 # ensures 1 node in a group gets message (point-to-point, not a broadcast)
