--- a/reservation-client.properties
+++ b/reservation-client.properties
@@ -1,5 +1,12 @@
+# To runs this edge-service(s) app on port 9999 by default
 server.port=${PORT:9999}
 
+# "output" is the name of the channel by default defined by
+# org.springframework.cloud.stream.messaging.Source#OUTPUT. It corresponds
+# to "input" defined by org.springframework.cloud.stream.messaging.Sink#INPUT
+#
+# You can use @EnableBinding to bind your application to a channel. Input and
+# output channels with the same destination are connected.
 spring.cloud.stream.bindings.output.destination=reservations
 
 security.oauth2.resource.userInfoUri=http://localhost:9191/uaa/user
