some sleuth config for zipkin

--- a/zipkin-service.properties
+++ b/zipkin-service.properties
@@ -5,5 +5,7 @@ spring.datasource.initialize = false
 
 
 spring.sleuth.enabled = false
+#spring.sleuth.sampler.probability = 1
+#spring.sleuth.sampler.percentage = 1
 
 zipkin.store.type = mem
