--- a/reservation-client-docker-dev.yml
+++ b/reservation-client-docker-dev.yml
@@ -14,7 +14,7 @@ spring:
         output:
           destination: reservations
   rabbitmq:
-    host: http://cloudapp-rabbitmq-server:${RABBITMQSERVER_PORT:5672}
+    host: http://cloudapp-rabbitmq-server
 
 # security.oauth2.resource.userInfoUri=http://localhost:9191/uaa/user
 
