--- a/reservation-service-docker-dev.yml
+++ b/reservation-service-docker-dev.yml
@@ -16,4 +16,5 @@ spring:
           # ensure that the Q is durable
           durableSubscription: true
   rabbitmq:
-    host: http://cloudapp-rabbitmq-server:${RABBITMQSERVER_PORT:5672}
+    host: http://cloudapp-rabbitmq-server
+    port: 5672
